# src/main/kotlin/cz/cvut/controller/MeasurementController.kt
@@ -8,25 +8,25 @@ import io.ktor.server.routing.*
 import io.ktor.util.*
 
 fun Route.measuremenRoutes(measurmentService: MeasurementService) {
-//    route("/measurements/{id}") {
-//        get {
-//            val dateFrom = call.request.queryParameters["dateFrom"]
-//            val dateTo = call.request.queryParameters["dateTo"]
-//            val element = call.request.queryParameters["element"]
-//
-//            val stationId = call.parameters["id"] ?: return@get call.respondText(
-//                "Missing ID", status = HttpStatusCode.BadRequest
-//            )
-//
-//            if (dateFrom == null || dateTo == null || element.isNullOrBlank()) {
-//                return@get call.respond(
-//                    HttpStatusCode.BadRequest,
-//                    "Missing required query parameters: dateFrom, dateTo, and element"
-//                )
-//            }
-//            val measurements = measurmentService.getMeasurements(stationId, dateFrom, dateTo, element)
-//            call.respond(measurements)
-//        }
+    route("/measurements/{id}") {
+        get {
+            val dateFrom = call.request.queryParameters["dateFrom"]
+            val dateTo = call.request.queryParameters["dateTo"]
+            val element = call.request.queryParameters["element"]
+
+            val stationId = call.parameters["id"] ?: return@get call.respondText(
+                "Missing ID", status = HttpStatusCode.BadRequest
+            )
+
+            if (dateFrom == null || dateTo == null || element.isNullOrBlank()) {
+                return@get call.respond(
+                    HttpStatusCode.BadRequest,
+                    "Missing required query parameters: dateFrom, dateTo, and element"
+                )
+            }
+            val measurements = measurmentService.getMeasurements(stationId, dateFrom, dateTo, element)
+            call.respond(measurements)
+        }
 
         get("statsDay/{id}") {
             val date = call.parameters["date"] ?: return@get call.respondText(
@@ -62,5 +62,6 @@ fun Route.measuremenRoutes(measurmentService: MeasurementService) {
 //            val actualMeasurements = measurmentService.getActualMeasurements( stationId)
 //            call.respond(actualMeasurements)
 //        }
-    //}
+        //}
+    }
 }
